<resources>
    <string name="app_name">Library Management</string>
    <string name="hello_reader">Hello Reader</string>
    <string name="logo">LOGO</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="enter_your_roll_number">Enter your Roll Number</string>
    <string name="email_id">Email ID</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_number">Enter your Number</string>
    <string name="year_of_study">Year of Study</string>
    <string name="enter_your_year_of_study">Enter your Year of Study</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="semester">Semester</string>
    <string name="_5th">5th</string>
    <string name="_4th">4th</string>
    <string name="_3rd">3rd</string>
    <string name="semester_1">Semester 1</string>
    <string name="semester_2">Semester 2</string>
    <string name="library_card_number">Library Card Number</string>
    <string name="enter_library_card_number">Enter Library Card Number</string>
    <string name="save_and_proceed">Save and Proceed</string>
    <string name="enter_your_semester">Enter your Semester</string>
    <string name="App_name">App Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email ID</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_already">Have an Account Already ?</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In with Google</string>
</resources>