<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/aref_ruqaa"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:paddingTop="100dp"
        android:text="@string/App_name"
        android:textAlignment="center"
        android:textSize="45sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/aref_ruqaa"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:paddingTop="100dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/email_id"
            android:textSize="18sp"
            android:layout_marginTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_id"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/password"
            android:textSize="18sp"
            android:layout_marginTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/cardview_shadow_start_color"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#03A9F4"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/have_an_account_already" />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="#03A9F4"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:fontFamily="@font/autour_one"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#03A9F4"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold" />




</LinearLayout>